--- a/vignettes/AncestryCheck.Rmd
+++ b/vignettes/AncestryCheck.Rmd
@@ -32,11 +32,13 @@ genotypes and the reference data (we recommend > 5% overlap) and consequently th
 forest classifier. In the following, we will demonstrate the workflow for
 setting up this training, starting with reference data download. We will use a test study dataset included in the package as an example for the workflow.  
 
+[Plink v2](https://www.cog-genomics.org/plink/2.0/) is needed for this workflow.  
+
 ### Download reference data
 A suitable reference dataset should be downloaded and if necessary, re-formated
 into PLINK format. Vignettes
-['Processing HapMap III reference data for ancestry estimation'](https://meyer-lab-cshl.github.io/plinkQC/articles/HapMap.html) and 
-['Processing 1000Genomes  reference data for ancestry estimation'](https://meyer-lab-cshl.github.io/plinkQC/articles/Genomes1000.html),
+['Processing HapMap III reference data for ancestry estimation'](HapMap.html) and 
+['Processing 1000Genomes  reference data for ancestry estimation'](Genomes1000.html),
 show the download and processing of the HapMap phase III and 1000Genomes phase
 III dataset, respectively. In this example, we will use the 1000Genomes data as
 the reference dataset. We recommend using ```check_relatedness``` on the
