updating link to bioRxiv manuscript

--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -45,6 +45,6 @@ install.packages("plinkQC")
 A log of version changes can be found [here](https://meyer-lab-cshl.github.io/plinkQC/news/index.html).
 
 ## <i class="fa fa-pencil" aria-hidden="true"></i> Citation
-Syed M, Walter C and Meyer HV (2025) plinkQC: Genotype quality control in genetic association
-studies. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3934294.svg)](https://doi.org/10.5281/zenodo.3934294)
+
+Syed M, Walter C and Meyer HV (2025) plinkQC: An Integrated Tool for Ancestry Inference, Sample Selection, and Quality Control in Population Genetics. [[bioRxiv]](https://www.biorxiv.org/content/10.1101/2025.11.25.690541v1)
 
